--- a/templates/default/coffre.html.twig
+++ b/templates/default/coffre.html.twig
@@ -1,3 +1,15 @@
+{% form_theme form _self %}
+
+{% use 'form_div_layout.html.twig' with integer_widget as base_integer_widget %}
+
+{% block form_errors %}
+    {% if errors is defined and errors|length > 0 %}
+        {% for error in errors %}
+            <div id="check-error" class="flash-warning">{{ error.message }}</div>
+        {% endfor %}
+    {% endif %}
+{% endblock form_errors %}
+
 <!DOCTYPE html>
 <html>
 <head>
